erratum : bugfixes (overflow + formulaire mal placé)

--- a/assets/css/detail_produit.css
+++ b/assets/css/detail_produit.css
@@ -11,7 +11,7 @@
 		width: 40vw;
 		margin: 0 30vw;
 		display: block;
-		z-index: -1;+
+		z-index: -1;
 	}
 
 	main h2 {
@@ -57,14 +57,14 @@
 	.tech .submit {
 		float: right;
 		margin-right: 80px;
-		margin-top: -40px;
+		margin-top: -30px;
 		font-size: 1.2em;
 		position: static;
 	}
 
 	.tech button {
 		position: absolute;
-		top: 50px;
+		top: 35px;
 		right: 80px;
 		font-size: 1.2em;
 		width: 200px;
